Changelog
=========

0.1.2 (unreleased)
------------------

- fixed set_coordinates js 
- Added dutch translations [robgietema]


0.1.1 (2010-11-13)
------------------

- added geocoding to controlpanel
- added cgmap.portal_url in collective.geo javascript
- Removed unused googleapi configuration from controlpanel
- Changed numZoomLevels in default mapwidget 
- Updated Google map layers to Googlemaps v3
- fixed italian translation


0.1 (2010-10-31)
----------------

* Initial release moved from collective.geo.settings